# LEVEL

./: .gitignore  C2XLib-0.1.0-win64.msi  CITATION.cff  CMakeLists.txt  Dockerfile  Dockerfile-test  Doxyfile  README.md  Toolchain-ARMv7.cmake  build-armv7-packet.sh  build-simulink-components.py  c2x.pc.in  run-valgrind.sh  simulink-component.template
c2xcam/: CMakeLists.txt
c2xcam/include/: c2xcam.h
c2xcam/src/: CAM.cpp  CAM.hpp  CAMContainer.cpp  CAMContainer.hpp  CAMData.hpp  CAMReceiver.cpp  CAMReceiver.hpp  CAMService.cpp  CAMService.hpp  CAMTransmitter.cpp  CAMTransmitter.hpp  CMakeLists.txt  Encoder.cpp  Encoder.hpp  Factory.cpp  Factory.hpp  IDatabase.hpp  IEncoder.hpp  INetworkInterface.hpp  InMemoryDatabase.cpp  InMemoryDatabase.hpp  UDPNetworkAccessLayer.cpp  UDPNetworkAccessLayer.hpp  c2xcam.cpp
c2xcam/src/CAM/: AccelerationControl.c  AccelerationControl.h  AccidentSubCauseCode.c  AccidentSubCauseCode.h  ActionID.c  AdverseWeatherCondition-ExtremeWeatherConditionSubCauseCode.c  AltitudeValue.h  CMakeLists.txt  CamParameters.c  CamParameters.h  CauseCode.c  DangerousGoodsBasic.h  DangerousGoodsExtended.h  DeltaLatitude.c  DeltaLatitude.h  EmergencyContainer.c  EmergencyContainer.h  ExteriorLights.h  GenerationDeltaTime.c  HardShoulderStatus.h  HazardousLocation-AnimalOnTheRoadSubCauseCode.h  HazardousLocation-DangerousCurveSubCauseCode.c  Heading.c  Heading.h  HeadingValue.c  HumanPresenceOnTheRoadSubCauseCode.h  LongitudinalAccelerationValue.h  Makefile.am.sample  PathHistory.c  PerformanceClass.c  PosFrontAx.h  PosPillar.h  PositionOfPillars.h  PositioningSolutionType.c  PostCrashSubCauseCode.h  ProtectedCommunicationZonesRSU.h  PtActivationData.h  PtActivationType.c  RelevanceDistance.c  RequestResponseIndication.c  (+17 more)
c2xcam/test/: CMakeLists.txt  DatabaseTests.cpp  EncoderTests.cpp  InMemoryDatabaseTest.cpp  NetworkAccessLayerTests.cpp  UDPUtilityTests.cpp
c2xdenm/: CMakeLists.txt
c2xdenm/include/: c2xdenm.h
c2xdenm/src/: CMakeLists.txt  DENMContainer.cpp  DENMContainer.hpp  DENMReceiver.cpp  DENMReceiver.hpp  DENMService.cpp  DENMService.hpp  DENMTransmitter.cpp  DENMTransmitter.hpp  c2xdenm.cpp
c2xdenm/src/DENM/: AccelerationConfidence.c  (+49 more)
cli/: CMakeLists.txt  main.cpp
example/: .gitignore  CAM_DENM_Example.slx  CMakeLists.txt  main.c
example/CAM_DENM_Example_ert_rtw/: CAM_DENM_Example.bat  CAM_DENM_Example.c  CAM_DENM_Example.h  CAM_DENM_Example.mk  CAM_DENM_Example.rsp  CAM_DENM_Example_comp.rsp  CMakeLists.txt  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  defines.txt  ert_main.c  modelsources.txt  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
src/: CMakeLists.txt  ServiceProvider.hpp  level.cpp
src/api/: CAMAPI.cpp  CMakeLists.txt  VDP.cpp
src/cam/: CABasicService.cpp  CABasicService.hpp  CAMData.hpp  CAMEncoder.hpp  CAMIndexer.hpp  CAMNetworkInterface.hpp  CAMRecvHandler.hpp  CAMWrapper.cpp  CAMWrapper.hpp  CMakeLists.txt  Encoder.cpp  Encoder.hpp  ICABasicService.hpp  IDatabase.hpp  IEncoder.hpp  IFrequencyManager.hpp  INetworkInterface.hpp  InMemoryDatabase.cpp  InMemoryDatabase.hpp  SocketBasedNAC.cpp  SocketBasedNAC.hpp  SocketBasedNI.cpp  SocketBasedNI.hpp  UDPNetworkAccessLayer.cpp  UDPNetworkAccessLayer.hpp  VehicleFrequencyManager.cpp  VehicleFrequencyManager.hpp
src/common/: CMakeLists.txt  DBElement.hpp  DBException.hpp  DBView.hpp  DEREncoder.hpp  DataExtension.hpp  DataExtensionMethods.hpp  EncodeException.hpp  ErrorHandler.hpp  Exception.cpp  Exception.hpp  IEncoder.hpp  IErrorHandler.hpp  INetworkInterface.hpp  IPOTI.hpp  IRecvHandler.hpp  ISocket.hpp  ISyscall.hpp  IValueConverter.hpp  NetworkException.hpp  POTI.cpp  POTI.hpp  PacketReceiver.cpp  PacketReceiver.hpp  RecvHandler.hpp  SocketNAL.hpp  Syscall.cpp  Syscall.hpp  Types.hpp  UDPSocket.cpp  UDPSocket.hpp  ValueConverter.cpp  ValueConverter.hpp  XEREncoder.hpp  level_common.cpp
src/database/: CMakeLists.txt  DBElement.hpp  DBElementStatus.hpp  DBException.hpp  DBView.hpp  Database.hpp  IDatabase.hpp  IIndexer.hpp  IQuery.hpp  Indexer.hpp  Query.hpp
src/denm/: CMakeLists.txt  DENBasicService.cpp  DENBasicService.hpp  DENMEncoder.hpp  DENMExtensions.hpp  DENMIndexer.hpp  DENMNetworkInterface.hpp  DENMRecvHandler.hpp  DENMWrapper.cpp  DENMWrapper.hpp  IDENBasicService.hpp
src/di/: CAMFactory.hpp  CAMServiceProvider.hpp  CMakeLists.txt
src/msg/: AccelerationConfidence.h  AdverseWeatherCondition-AdhesionSubCauseCode.c  AdverseWeatherCondition-AdhesionSubCauseCode.h  AdverseWeatherCondition-ExtremeWeatherConditionSubCauseCode.h  AdverseWeatherCondition-PrecipitationSubCauseCode.c  AdverseWeatherCondition-PrecipitationSubCauseCode.h  AdverseWeatherCondition-VisibilitySubCauseCode.c  AdverseWeatherCondition-VisibilitySubCauseCode.h  AlacarteContainer.c  AlacarteContainer.h  Altitude.c  Altitude.h  AltitudeConfidence.c  AltitudeValue.c  BasicContainer.c  BasicContainer.h  BasicVehicleContainerHighFrequency.c  BasicVehicleContainerHighFrequency.h  BasicVehicleContainerLowFrequency.c  BasicVehicleContainerLowFrequency.h  CAM.c  CAM.h  CMakeLists.txt  CauseCode.h  CauseCodeType.c  CenDsrcTollingZone.c  CenDsrcTollingZone.h  CenDsrcTollingZoneID.c  CenDsrcTollingZoneID.h  ClosedLanes.c  ClosedLanes.h  CollisionRiskSubCauseCode.c  CoopAwareness.c  CoopAwareness.h  Curvature.c  Curvature.h  CurvatureCalculationMode.c  CurvatureCalculationMode.h  CurvatureConfidence.c  CurvatureConfidence.h  (+190 more)
test/: CMakeLists.txt  Mocks.hpp  UDPUtilityTests.cpp  level_test.cpp
test/cam/: CMakeLists.txt  DatabaseTests.cpp  EncoderTests.cpp  NetworkAccessLayerTests.cpp
test/common/: CMakeLists.txt  DBElementTests.cpp  ExceptionTests.cpp  UDPSocketTests.cpp  UDPUtilityTests.cpp
test/database/: CMakeLists.txt  DBElementTests.cpp  DBViewTests.cpp  DatabaseTests.cpp  QueryTests.cpp
test/denm/: CMakeLists.txt
test/e2e/: main.c
test/integration/: CMakeLists.txt  DatabaseTests.cpp  NetworkTests.cpp  main.cpp
test/mocks/: Mocks.hpp
test/unit/: CMakeLists.txt  level_test.cpp
test/valgrind/: CMakeLists.txt  main.cpp
testExec/: CMakeLists.txt  main.cpp
(+283 files in other folders)
