if(UNIX) 

  get_property(LEVEL_UNIT_TEST_TARGET GLOBAL PROPERTY LEVEL_UNIT_TEST_TARGET)
  get_property(LEVEL_UNIT_TEST_TARGET_PATH GLOBAL PROPERTY LEVEL_UNIT_TEST_TARGET_PATH)
  add_definitions( -DUNIT_TEST_TARGET=${LEVEL_UNIT_TEST_TARGET})
  add_definitions( -DUNIT_TEST_TARGET_PATH=${LEVEL_UNIT_TEST_TARGET_PATH})

  get_property(LEVEL_INTEGRATION_TEST_TARGET GLOBAL PROPERTY LEVEL_INTEGRATION_TEST_TARGET)
  get_property(LEVEL_INTEGRATION_TEST_TARGET_PATH GLOBAL PROPERTY LEVEL_INTEGRATION_TEST_TARGET_PATH)
  add_definitions( -DINTEGRATION_TEST_TARGET=${LEVEL_INTEGRATION_TEST_TARGET})
  add_definitions( -DINTEGRATION_TEST_TARGET_PATH=${LEVEL_INTEGRATION_TEST_TARGET_PATH})

  set(LEVEL_TARGET_NAME ValgrindTests)

  add_executable(${LEVEL_TARGET_NAME} 
    ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
  )

  target_include_directories(${LEVEL_TARGET_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

  set(THREADS_PREFER_PTHREAD_FLAG ON)
  find_package(Threads REQUIRED)
  target_link_libraries(${LEVEL_TARGET_NAME} PRIVATE gtest_main Threads::Threads)

  gtest_discover_tests(${LEVEL_TARGET_NAME})

endif()